Fixed alignment issue in header.

--- a/src/index.css
+++ b/src/index.css
@@ -153,6 +153,7 @@ header {
 
 .bi {
   padding-right: 3px;
+  padding-top: 4px;
 }
 
 .header-cart {
